--- a/chemodan__shop/basket.html
+++ b/chemodan__shop/basket.html
@@ -2119,7 +2119,7 @@
 								</div>
 								<p class="perinfo__subtitle">*Войдите и получайте с каждого заказа баллы, которые можно будет<br> обменять на скидки и бонусы</p>
 							</div>
-							<div class="perinfo__form">
+							<div class="perinfo__form perinfo__new">
 								<div class="account__input perinfo__input_1">
 									<label for="">Имя:</label>
 									<input type="text" placeholder="Имя:*">
@@ -2155,6 +2155,202 @@
 								<div class="perinfo__check">
 									<input type="checkbox" id="address1" class="checkbox">
 									<label for="address1" class="checkboxlabel">Зарегистрироваться как постоянный покупатель</label>
+								</div>
+							</div>
+							<!-- Password -->
+							<div class="perinfo__box perinfo__box_1">
+								<div class="perinfo__left">
+									<div class="perinfo__form perinfo__form_nb">
+										<div class="account__input perinfo__input_full">
+											<label for="">Введите e-mail:</label>
+											<input type="text" placeholder="E-mail*">
+										</div>
+										<a class="perinfo__a tab_1">Вход</a>
+										<a class="perinfo__a tab_2">Регистрация</a>
+									</div>
+									<button class="btn btn_center modalrun5">Восстановить</button>
+								</div>
+								<div class="perinfo__right">
+									<p class="perinfo__subtitle_2">Или войдите с помощью:</p>
+									<div class="perinfo__socials">
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_1">
+												<i class="fa fa-vk" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_1">
+												<p>ВКонтакте</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_2">
+												<i class="fa fa-odnoklassniki" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_2">
+												<p>Одноклассники</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_3">
+												<i class="fa fa-facebook" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_3">
+												<p>Facebook</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_4">
+												<i class="fa fa-google-plus" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_4">
+												<p>Google+</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_5">
+												<i class="fa fa-twitter" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_5">
+												<p>Twitter</p>
+											</div>
+										</a>
+									</div>
+								</div>
+							</div>
+							<!-- Registration -->
+							<div class="perinfo__box perinfo__box_2">
+								<div class="perinfo__left">
+									<div class="perinfo__form perinfo__form_nb">
+										<div class="account__input perinfo__input_full">
+											<label for="">Имя:</label>
+											<input type="text" placeholder="Имя*">
+										</div>
+										<div class="account__input perinfo__input_full">
+											<label for="">Фамилия:</label>
+											<input type="text" placeholder="Фамилия*">
+										</div>
+										<div class="account__input perinfo__input_full">
+											<label for="">E-mail:</label>
+											<input type="text" placeholder="E-mail*">
+										</div>
+										<div class="account__input perinfo__input_full">
+											<label for="">Логин:</label>
+											<input type="text" placeholder="Логин*">
+										</div>
+										<div class="account__input perinfo__input_full">
+											<label for="">Пароль:</label>
+											<input type="text" placeholder="Пароль*">
+										</div>
+										<a class="perinfo__a tab_1">У вас уже есть аккаунт? Войдите</a>
+									</div>
+									<button class="btn btn_center modalrun5">Зарегистрироваться</button>
+								</div>
+								<div class="perinfo__right">
+									<p class="perinfo__subtitle_2">Или войдите с помощью:</p>
+									<div class="perinfo__socials">
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_1">
+												<i class="fa fa-vk" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_1">
+												<p>ВКонтакте</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_2">
+												<i class="fa fa-odnoklassniki" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_2">
+												<p>Одноклассники</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_3">
+												<i class="fa fa-facebook" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_3">
+												<p>Facebook</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_4">
+												<i class="fa fa-google-plus" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_4">
+												<p>Google+</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_5">
+												<i class="fa fa-twitter" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_5">
+												<p>Twitter</p>
+											</div>
+										</a>
+									</div>
+								</div>
+							</div>
+							<!-- Sign in -->
+							<div class="perinfo__box perinfo__box_3">
+								<div class="perinfo__left">
+									<div class="perinfo__form perinfo__form_nb">
+										<div class="account__input perinfo__input_full">
+											<label for="">Логин:</label>
+											<input type="text" placeholder="Логин*">
+										</div>
+										<div class="account__input perinfo__input_full">
+											<label for="">Пароль:</label>
+											<input type="text" placeholder="Пароль*">
+										</div>
+										<a class="perinfo__a tab_3">Забыли пароль?</a>
+										<a class="perinfo__a tab_2">Регистрация</a>
+									</div>
+									<button class="btn btn_center modalrun5">Войти</button>
+								</div>
+								<div class="perinfo__right">
+									<p class="perinfo__subtitle_2">Или войдите с помощью:</p>
+									<div class="perinfo__socials">
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_1">
+												<i class="fa fa-vk" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_1">
+												<p>ВКонтакте</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_2">
+												<i class="fa fa-odnoklassniki" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_2">
+												<p>Одноклассники</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_3">
+												<i class="fa fa-facebook" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_3">
+												<p>Facebook</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_4">
+												<i class="fa fa-google-plus" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_4">
+												<p>Google+</p>
+											</div>
+										</a>
+										<a href="https://www.facebook.com/" class="perinfo__item">
+											<div class="perinfo__socimg perinfo__socimg_5">
+												<i class="fa fa-twitter" aria-hidden="true"></i>
+											</div>
+											<div class="perinfo__soctitle perinfo__soctitle_5">
+												<p>Twitter</p>
+											</div>
+										</a>
+									</div>
 								</div>
 							</div>
 							<div class="basket__total">
