--- a/rattler/index.html
+++ b/rattler/index.html
@@ -72,19 +72,19 @@
 					<h2>Услуги для владельцев <br>
 					бизнеса и руководителей <br>
 					предприятия</h2>
-					<button class="btn">Подробнее</button>
+					<button class="btn modal-run">Подробнее</button>
 				</div>
 				<div class="banner__slide">
 					<h2>Услуги для владельцев <br>
 					бизнеса и руководителей <br>
 					предприятия</h2>
-					<button class="btn">Подробнее</button>
+					<button class="btn modal-run">Подробнее</button>
 				</div>
 				<div class="banner__slide">
 					<h2>Услуги для владельцев <br>
 					бизнеса и руководителей <br>
 					предприятия</h2>
-					<button class="btn">Подробнее</button>
+					<button class="btn modal-run">Подробнее</button>
 				</div>
 			</div>	
 			<div class="whowe">
@@ -275,6 +275,67 @@
 					<img src="img/map.jpg" alt="">
 				</div>
 			</div>
+			<!--Modal window-->
+			<div class="modal-form modal-1">
+				<span class="modal-close"></span>
+				<div class="modal__main">
+					<h2 class="modal__title">Форма заявки</h2>
+					<div class="modal__form">
+						<div class="modal__input">
+							<input type="text" placeholder="Ваше имя">
+						</div>
+						<div class="modal__input">
+							<input type="text" placeholder="Ваш телефон">
+						</div>
+						<div class="modal__input">
+							
+						</div>
+						<ul class="select2">
+							<li class="select2__item_init">
+								Окно с вариантом выбора
+							</li>
+							<li data-value="value 1" class="select2__item">
+								Val1
+							</li>
+							<li data-value="value 2" class="select2__item">
+								Val2
+							</li>
+							<li data-value="value 3" class="select2__item">
+								Val3
+							</li>
+							<li data-value="value 4" class="select2__item">
+								Val4
+							</li>
+						</ul>
+						<div class="modal__textarea">
+							<textarea name="" placeholder="Ваш вопрос"></textarea>
+						</div>
+						<button class="btn btn_2 modal-run-2">отправить</button>
+					</div>
+				</div>
+				<div class="details__bottom flex modal__bottom">
+					<div class="details__text modal__text">
+						<img src="img/lock.png" alt="">
+						<p>Отправляя запрос, я даю согласие на обработку своих персональных данных.</p>
+					</div>
+					<div class="details__text modal__text">
+						<a>Политика конфидициальности</a>
+					</div>
+				</div>
+			</div>
+			<div class="overlay"></div>
+			<!--Modal window end-->
+
+			<!--Modal window-->
+			<div class="modal-form modal-thx">
+				<span class="modal-close"></span>
+				<div class="modal__main">
+					<h2 class="modal__title">Спасибо</h2>
+					<p class="modal__p">Ваша заявка принята и будет расмотрена!<br> Мы вам перезвоним!</p>
+				</div>
+			</div>
+			<div class="overlay"></div>
+			<!--Modal window end-->
 		</div>		
 	</main>	
 			
