--- a/rattler/index.html
+++ b/rattler/index.html
@@ -67,7 +67,7 @@
 			</div>
 		</div>			
 		<div class="wrapper">
-			<div class="banner">
+			<div class="banner" touch-action="none">
 				<div class="banner__slide">
 					<h2>Услуги для владельцев <br>
 					бизнеса и руководителей <br>
