--- a/chemodan__shop/wishlist.html
+++ b/chemodan__shop/wishlist.html
@@ -1596,7 +1596,7 @@
 						<li class="active">
 							<a href="">Скидки и акции</a>
 							<div class="dropdown">
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1607,7 +1607,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1618,7 +1618,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_orange dropdown__tip">ХИТ</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1629,7 +1629,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1640,7 +1640,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1651,7 +1651,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1662,7 +1662,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1786,7 +1786,10 @@
 									<span class="product__price product__price_discount">2 604 руб.</span>
 								</div>
 							</div>
-							<button class="product__btn">ДОБАВИТЬ В КОРЗИНУ</button>
+							<div class="product__btncont">
+								<button class="product__btn product__btn_2">В КОРЗИНУ</button>
+								<button class="product__btn product__btn_2">УБРАТЬ</button>
+							</div>
 							<span class="product__tip product__tip_red">-30%</span>
 							<span class="product__compare">
 								<i></i>
@@ -1846,7 +1849,10 @@
 									<span class="product__price product__price_now">3 190 руб.</span>
 								</div>
 							</div>
-							<button class="product__btn">ДОБАВИТЬ В КОРЗИНУ</button>
+							<div class="product__btncont">
+								<button class="product__btn product__btn_2">В КОРЗИНУ</button>
+								<button class="product__btn product__btn_2">УБРАТЬ</button>
+							</div>
 							<span class="product__tip product__tip_green">+ подарок</span>
 							<span class="product__compare">
 								<i></i>
@@ -1906,7 +1912,10 @@
 									<span class="product__price product__price_now">3 190 руб.</span>
 								</div>
 							</div>
-							<button class="product__btn">ДОБАВИТЬ В КОРЗИНУ</button>
+							<div class="product__btncont">
+								<button class="product__btn product__btn_2">В КОРЗИНУ</button>
+								<button class="product__btn product__btn_2">УБРАТЬ</button>
+							</div>
 							<span class="product__tip product__tip_orange">хит</span>
 							<span class="product__compare">
 								<i></i>
@@ -1998,7 +2007,10 @@
 									<span class="product__price product__price_discount">2 604 руб.</span>
 								</div>
 							</div>
-							<button class="product__btn">ДОБАВИТЬ В КОРЗИНУ</button>
+							<div class="product__btncont">
+								<button class="product__btn product__btn_2">В КОРЗИНУ</button>
+								<button class="product__btn product__btn_2">УБРАТЬ</button>
+							</div>
 							<span class="product__tip product__tip_red">-30%</span>
 							<span class="product__compare">
 								<i></i>
@@ -2058,7 +2070,10 @@
 									<span class="product__price product__price_now">3 190 руб.</span>
 								</div>
 							</div>
-							<button class="product__btn">ДОБАВИТЬ В КОРЗИНУ</button>
+							<div class="product__btncont">
+								<button class="product__btn product__btn_2">В КОРЗИНУ</button>
+								<button class="product__btn product__btn_2">УБРАТЬ</button>
+							</div>
 							<span class="product__tip product__tip_green">+ подарок</span>
 							<span class="product__compare">
 								<i></i>
@@ -2118,7 +2133,10 @@
 									<span class="product__price product__price_now">3 190 руб.</span>
 								</div>
 							</div>
-							<button class="product__btn">ДОБАВИТЬ В КОРЗИНУ</button>
+							<div class="product__btncont">
+								<button class="product__btn product__btn_2">В КОРЗИНУ</button>
+								<button class="product__btn product__btn_2">УБРАТЬ</button>
+							</div>
 							<span class="product__tip product__tip_orange">хит</span>
 							<span class="product__compare">
 								<i></i>
@@ -2210,7 +2228,10 @@
 									<span class="product__price product__price_discount">2 604 руб.</span>
 								</div>
 							</div>
-							<button class="product__btn">ДОБАВИТЬ В КОРЗИНУ</button>
+							<div class="product__btncont">
+								<button class="product__btn product__btn_2">В КОРЗИНУ</button>
+								<button class="product__btn product__btn_2">УБРАТЬ</button>
+							</div>
 							<span class="product__tip product__tip_red">-30%</span>
 							<span class="product__compare">
 								<i></i>
@@ -2270,7 +2291,10 @@
 									<span class="product__price product__price_now">3 190 руб.</span>
 								</div>
 							</div>
-							<button class="product__btn">ДОБАВИТЬ В КОРЗИНУ</button>
+							<div class="product__btncont">
+								<button class="product__btn product__btn_2">В КОРЗИНУ</button>
+								<button class="product__btn product__btn_2">УБРАТЬ</button>
+							</div>
 							<span class="product__tip product__tip_green">+ подарок</span>
 							<span class="product__compare">
 								<i></i>
@@ -2330,7 +2354,10 @@
 									<span class="product__price product__price_now">3 190 руб.</span>
 								</div>
 							</div>
-							<button class="product__btn">ДОБАВИТЬ В КОРЗИНУ</button>
+							<div class="product__btncont">
+								<button class="product__btn product__btn_2">В КОРЗИНУ</button>
+								<button class="product__btn product__btn_2">УБРАТЬ</button>
+							</div>
 							<span class="product__tip product__tip_orange">хит</span>
 							<span class="product__compare">
 								<i></i>
@@ -2368,7 +2395,7 @@
 					<label for="">Пароль:</label>
 					<input type="text" placeholder="Пароль*">
 				</div>
-				<a href="" class="modal__log">У вас уже есть аккаунт? Войдите</a>
+				<a href="" class="modal__log modalrun2">У вас уже есть аккаунт? Войдите</a>
 				<button class="modal__btn">Зарегистрироваться</button>
 			</form>
 		</div>
@@ -2388,7 +2415,7 @@
 					<input type="text" placeholder="Пароль*">
 				</div>
 				<a href="" class="modal__forget">Забыли пароль?</a>
-				<a href="" class="modal__reg">Регистрация</a>
+				<a href="" class="modal__reg modalrun1">Регистрация</a>
 				<button class="modal__btn">Войти</button>
 			</form>
 			<div class="modal__bottom">
