--- a/chemodan__shop/basket.html
+++ b/chemodan__shop/basket.html
@@ -1596,7 +1596,7 @@
 						<li class="active">
 							<a href="">Скидки и акции</a>
 							<div class="dropdown">
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1607,7 +1607,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1618,7 +1618,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_orange dropdown__tip">ХИТ</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1629,7 +1629,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1640,7 +1640,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1651,7 +1651,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1662,7 +1662,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1745,9 +1745,9 @@
 								<div class="basket__col basket__col_4">
 									<div class="cardgood__cont cardgood__cont_amount">
 										<div class="cardgood__amount">
-											<i class="fa fa-minus" aria-hidden="true"></i>
+											<i class="fa fa-minus cardgood__minus" aria-hidden="true"></i>
 											<input type="text" tabindex="0" value="1">
-											<i class="fa fa-plus" aria-hidden="true"></i>
+											<i class="fa fa-plus cardgood__plus" aria-hidden="true"></i>
 										</div>
 									</div>
 								</div>
@@ -1787,9 +1787,9 @@
 								<div class="basket__col basket__col_4">
 									<div class="cardgood__cont cardgood__cont_amount">
 										<div class="cardgood__amount">
-											<i class="fa fa-minus" aria-hidden="true"></i>
+											<i class="fa fa-minus cardgood__minus" aria-hidden="true"></i>
 											<input type="text" tabindex="0" value="1">
-											<i class="fa fa-plus" aria-hidden="true"></i>
+											<i class="fa fa-plus cardgood__plus" aria-hidden="true"></i>
 										</div>
 									</div>
 								</div>
@@ -1829,9 +1829,9 @@
 								<div class="basket__col basket__col_4">
 									<div class="cardgood__cont cardgood__cont_amount">
 										<div class="cardgood__amount">
-											<i class="fa fa-minus" aria-hidden="true"></i>
+											<i class="fa fa-minus cardgood__minus" aria-hidden="true"></i>
 											<input type="text" tabindex="0" value="1">
-											<i class="fa fa-plus" aria-hidden="true"></i>
+											<i class="fa fa-plus cardgood__plus" aria-hidden="true"></i>
 										</div>
 									</div>
 								</div>
@@ -1871,9 +1871,9 @@
 								<div class="basket__col basket__col_4">
 									<div class="cardgood__cont cardgood__cont_amount">
 										<div class="cardgood__amount">
-											<i class="fa fa-minus" aria-hidden="true"></i>
+											<i class="fa fa-minus cardgood__minus" aria-hidden="true"></i>
 											<input type="text" tabindex="0" value="1">
-											<i class="fa fa-plus" aria-hidden="true"></i>
+											<i class="fa fa-plus cardgood__plus" aria-hidden="true"></i>
 										</div>
 									</div>
 								</div>
@@ -1901,10 +1901,10 @@
 									</div>
 									<span class="basket__totalspan">Продолжить покупки</span>
 								</div>
-								<button class="btn">Продолжить</button>
+								<button class="btn" data-id="2">Продолжить</button>
 							</div>
 						</div>
-						<div class="confirm">
+						<div class="confirm" id="next-4">
 							<div class="confirm__left">
 								<div class="confirm__product">
 									<p class="basket__name">Чемодан Atma Classic</p>
@@ -1995,15 +1995,15 @@
 									</div>
 									<span class="basket__totalspan">Назад к доставке и оплате</span>
 								</div>
-								<button class="btn">Подтвердить</button>
+								<button class="btn confirm__success">Подтвердить</button>
 							</div>
 						</div>
-						<!-- <div class="continue">
+						<div class="continue">
 							<h2 class="continue__title">СПАСИБО ЗА ЗАКАЗ!</h2>
 							<p class="continue__p">Наш менеджер свяжется с Вами в течении суток для уточнения<br> деталей заказа</p>
 							<button class="btn">Вернуться на главную</button>
-						</div> -->
-						<div class="delpay">
+						</div>
+						<div class="delpay" id="next-3">
 							<p class="delpay__title">Выберите способ доставки</p>
 							<div class="delpay__cont">
 								<div class="delpay__item">
@@ -2106,8 +2106,21 @@
 									</div>
 								</div>
 							</div>
+							<div class="basket__total">
+								<span class="basket__totalspan">Итого:</span>
+								<span class="basket__totalspan basket__totalspan_2">7 960 руб</span>
+							</div>
+							<div class="basket__buttcont">
+								<div class="basket__return">
+									<div class="basket__arrow">
+										<i class="fa fa-angle-left" aria-hidden="true"></i>
+									</div>
+									<span class="basket__totalspan">Продолжить покупки</span>
+								</div>
+								<button class="btn" data-id="4">Продолжить</button>
+							</div>
 						</div>
-						<div class="perinfo">
+						<div class="perinfo" id="next-2">
 							<div class="perinfo__top">
 								<div class="perinfo__choose perinfo__choose_1">
 									<input id="del1" type="radio" name="del" placeholder="" checked>
@@ -2364,7 +2377,7 @@
 									</div>
 									<span class="basket__totalspan">Назад в корзину</span>
 								</div>
-								<button class="btn">Продолжить</button>
+								<button class="btn" data-id="3">Продолжить</button>
 							</div>
 						</div>
 					</div>
@@ -2407,7 +2420,7 @@
 					<label for="">Пароль:</label>
 					<input type="text" placeholder="Пароль*">
 				</div>
-				<a href="" class="modal__log">У вас уже есть аккаунт? Войдите</a>
+				<a href="" class="modal__log modalrun2">У вас уже есть аккаунт? Войдите</a>
 				<button class="modal__btn">Зарегистрироваться</button>
 			</form>
 		</div>
@@ -2427,7 +2440,7 @@
 					<input type="text" placeholder="Пароль*">
 				</div>
 				<a href="" class="modal__forget">Забыли пароль?</a>
-				<a href="" class="modal__reg">Регистрация</a>
+				<a href="" class="modal__reg modalrun1">Регистрация</a>
 				<button class="modal__btn">Войти</button>
 			</form>
 			<div class="modal__bottom">
