--- a/chemodan__shop/card_goods.html
+++ b/chemodan__shop/card_goods.html
@@ -1597,7 +1597,7 @@
 						<li class="active">
 							<a href="">Скидки и акции</a>
 							<div class="dropdown">
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1608,7 +1608,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1619,7 +1619,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_orange dropdown__tip">ХИТ</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1630,7 +1630,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1641,7 +1641,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1652,7 +1652,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1663,7 +1663,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1714,6 +1714,8 @@
 								<i></i>
 							</span>
 							<div class="sp-wrap">
+								<a href="images/card_good1.png"><img src="images/card_good1.png" alt=""></a>
+								<a href="images/card_good1.png"><img src="images/card_good1.png" alt=""></a>
 								<a href="images/card_good1.png"><img src="images/card_good1.png" alt=""></a>
 								<a href="images/card_good1.png"><img src="images/card_good1.png" alt=""></a>
 								<a href="images/card_good1.png"><img src="images/card_good1.png" alt=""></a>
@@ -1780,9 +1782,9 @@
 									<h4>Количество</h4>
 									<div class="cardgood__cont cardgood__cont_amount">
 										<div class="cardgood__amount">
-											<i class="fa fa-minus" aria-hidden="true"></i>
+											<i class="fa fa-minus cardgood__minus" aria-hidden="true"></i>
 											<input type="text" tabindex="0" value="1">
-											<i class="fa fa-plus" aria-hidden="true"></i>
+											<i class="fa fa-plus cardgood__plus" aria-hidden="true"></i>
 										</div>
 									</div>
 								</div>
@@ -2644,7 +2646,7 @@ ia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolor
 					<label for="">Пароль:</label>
 					<input type="text" placeholder="Пароль*">
 				</div>
-				<a href="" class="modal__log">У вас уже есть аккаунт? Войдите</a>
+				<a href="" class="modal__log modalrun2">У вас уже есть аккаунт? Войдите</a>
 				<button class="modal__btn">Зарегистрироваться</button>
 			</form>
 		</div>
@@ -2664,7 +2666,7 @@ ia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolor
 					<input type="text" placeholder="Пароль*">
 				</div>
 				<a href="" class="modal__forget">Забыли пароль?</a>
-				<a href="" class="modal__reg">Регистрация</a>
+				<a href="" class="modal__reg modalrun1">Регистрация</a>
 				<button class="modal__btn">Войти</button>
 			</form>
 			<div class="modal__bottom">
