--- a/chemodan__shop/feedback.html
+++ b/chemodan__shop/feedback.html
@@ -1596,7 +1596,7 @@
 						<li class="active">
 							<a href="">Скидки и акции</a>
 							<div class="dropdown">
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1607,7 +1607,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1618,7 +1618,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_orange dropdown__tip">ХИТ</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1629,7 +1629,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1640,7 +1640,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1651,7 +1651,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1662,7 +1662,7 @@
 									</div>
 								</div>
 
-								<div class="dropdown__item">
+								<div class="dropdown__item dropdown__item_akcii">
 									<span class="product__tip product__tip_purple dropdown__tip">NEW</span>
 									<div class="dropdown__itemleft">
 										<h2 class="dropdown__title">Чемодан Alezar Cyprus </h2>
@@ -1942,7 +1942,7 @@
 					<label for="">Пароль:</label>
 					<input type="text" placeholder="Пароль*">
 				</div>
-				<a href="" class="modal__log">У вас уже есть аккаунт? Войдите</a>
+				<a href="" class="modal__log modalrun2">У вас уже есть аккаунт? Войдите</a>
 				<button class="modal__btn">Зарегистрироваться</button>
 			</form>
 		</div>
@@ -1962,7 +1962,7 @@
 					<input type="text" placeholder="Пароль*">
 				</div>
 				<a href="" class="modal__forget">Забыли пароль?</a>
-				<a href="" class="modal__reg">Регистрация</a>
+				<a href="" class="modal__reg modalrun1">Регистрация</a>
 				<button class="modal__btn">Войти</button>
 			</form>
 			<div class="modal__bottom">
