--- a/chemodan__shop/card_goods.html
+++ b/chemodan__shop/card_goods.html
@@ -1707,7 +1707,7 @@
 					<div class="cardgood">
 						<div class="cardgood__slider clearfix">
 							<span class="product__tip product__tip_red">-30%</span>
-							<span class="product__stats">
+							<span class="product__compare">
 								<i></i>
 							</span>
 							<span class="product__favorite">
