--- a/chemodan__shop/index.html
+++ b/chemodan__shop/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="ru" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="format-detection" content="telephone=no">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
+	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<title>Главная</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />	
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&amp;subset=cyrillic" rel="stylesheet">
@@ -3154,25 +3154,25 @@
 		<div class="modalform modalreg">
 			<span class="modal__close">+</span>
 			<h2 class="modal__title">Регистрация</h2>
-			<form action="" class="modal__form">
+			<form action="#" class="modal__form">
 				<div class="modal__input">
-					<label for="">Имя:</label>
+					<label>Имя:</label>
 					<input type="text" placeholder="Имя*">
 				</div>
 				<div class="modal__input">
-					<label for="">Фамилия:</label>
+					<label>Фамилия:</label>
 					<input type="text" placeholder="Фамилия*">
 				</div>
 				<div class="modal__input">
-					<label for="">E-mail:</label>
+					<label>E-mail:</label>
 					<input type="text" placeholder="E-mail*">
 				</div>
 				<div class="modal__input">
-					<label for="">Логин:</label>
+					<label>Логин:</label>
 					<input type="text" placeholder="Логин*">
 				</div>
 				<div class="modal__input">
-					<label for="">Пароль:</label>
+					<label>Пароль:</label>
 					<input type="text" placeholder="Пароль*">
 				</div>
 				<a href="" class="modal__log modalrun2">У вас уже есть аккаунт? Войдите</a>
@@ -3185,13 +3185,13 @@
 		<div class="modalform modallog">
 			<span class="modal__close">+</span>
 			<h2 class="modal__title">Вход</h2>
-			<form action="" class="modal__form">
+			<form action="#" class="modal__form">
 				<div class="modal__input">
-					<label for="">Логин:</label>
+					<label>Логин:</label>
 					<input type="text" placeholder="Логин*">
 				</div>
 				<div class="modal__input">
-					<label for="">Пароль:</label>
+					<label>Пароль:</label>
 					<input type="text" placeholder="Пароль*">
 				</div>
 				<a href="" class="modal__forget">Забыли пароль?</a>
@@ -3215,20 +3215,20 @@
 		<div class="modalform modalcall">
 			<span class="modal__close">+</span>
 			<h2 class="modal__title">Перезвонить Вам?</h2>
-			<form action="" class="modal__form">
+			<form action="#" class="modal__form">
 				<p class="modal__subtitle">Есть вопросы? Заполните форму ниже и мы обязательно Вам <br />
 				перезвоним!</p>
 				<div class="modal__input modal__input_1">
-					<label for="">Имя:</label>
+					<label>Имя:</label>
 					<input type="text" placeholder="Имя*">
 				</div>
 				<div class="modal__input modal__input_2">
-					<label for="">Телефон:</label>
+					<label>Телефон:</label>
 					<input type="text" placeholder="Телефон*">
 				</div>
 				<div class="modal__textarea">
-					<label for="">Комментарий:</label>
-					<textarea type="text" placeholder="Ваш комментарий"></textarea>
+					<label>Комментарий:</label>
+					<textarea placeholder="Ваш комментарий"></textarea>
 				</div>
 				<div class="modal__bottom modal__bottom_2">
 					<button class="modal__btn">Отправить</button>
@@ -3241,7 +3241,7 @@
 		<div class="modalform modalcity">
 			<span class="modal__close">+</span>
 			<h2 class="modal__title">Выберите свой город</h2>
-			<form action="" class="modal__form">
+			<form action="#" class="modal__form">
 				<p class="modal__subtitle modal__subtitle_2">Доставляем заказы по всей России!</p>
 				<div class="modal__cities">
 					<a href="">Москва</a>
@@ -3254,7 +3254,7 @@
 					<a href="">Челябинск</a>
 				</div>
 				<div class="modal__input">
-					<label for="">Или введите любой другой населённый пункт России:</label>
+					<label>Или введите любой другой населённый пункт России:</label>
 					<input type="text" placeholder="Например, Нижний Новгород">
 				</div>
 			</form>
@@ -3279,7 +3279,7 @@
 				<p>чемоданы, сумки, аксессуары</p>
 			</a>
 			<div class="header__phonenumber">
-				<a href="tel:+7(916)555-35-35" class="phone-number">+7 (916) 555-35-35</a>
+				<a href="tel:+79165553535" class="phone-number">+7 (916) 555-35-35</a>
 				<div class="phone-icons">
 					<a href=""><img src="img/favicon.png" alt=""></a>
 					<a href=""><img src="img/viber-logo.png" alt=""></a>
@@ -3462,7 +3462,6 @@
 						<li class="fmenu__li">
 							<a href="" class="fmenu__link">Службами:</a>
 						</li>
-						</li>
 					</ul>
 					<div class="fmenu__services">
 						<img src="img/fserv1.png" alt="">
@@ -3476,7 +3475,7 @@
 			<div class="footer__box">
 				<h2 class="fmenu__title">КОНТАКТЫ</h2>
 				<p class="footer__address"><b>Адрес:</b> Россия, г.Москва, ул. Ленина 25</p>
-				<a href="tel:+8 (800) 555-35-35" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a>
+				<a href="tel:+88005553535" class="footer__phone"><b>Телефон:</b> +8 (800) 555-35-35</a>
 				<br />
 				<a href="mailto:smokyshop@gmail.com" class="footer__email"><b>E-mail:</b> chemodan@gmail.com</a>
 				<p class="footer__copyright">
@@ -3513,15 +3512,15 @@
 
 <!-- BODY EOF   -->
 	
-	<script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>		
-	<script type="text/javascript" src="js/jquery-migrate-1.4.1.min.js" ></script>
+	<script src="js/jquery-3.0.0.min.js"></script>		
+	<script src="js/jquery-migrate-1.4.1.min.js" ></script>
 	<!--
 	<script type="text/javascript" src="js/components/jquery.fancybox.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.formstyler.js" ></script>
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
-	<script type="text/javascript" src="js/components/jquery.countdown.min.js" ></script>
-	<script type="text/javascript" src="js/components/slick.js" ></script>
-	<script type="text/javascript" src="js/custom.js" ></script>
+	<script src="js/components/jquery.countdown.min.js" ></script>
+	<script src="js/components/slick.js" ></script>
+	<script src="js/custom.js" ></script>
 </body>
 </html>
