--- a/drilling_solutions/index.html
+++ b/drilling_solutions/index.html
@@ -126,11 +126,21 @@
 							<img src="img/sm1.jpg" alt="">
 						</div>
 						<div class="slider-nav">
-							<img style="margin: 0px 15px 0px 15px" src="img/tm1.jpg" alt="">
-							<img style="margin: 0px 15px 0px 15px" src="img/sm2.jpg" alt="">
-							<img style="margin: 0px 15px 0px 15px" src="img/sm3.jpg" alt="">
-							<img style="margin: 0px 15px 0px 15px" src="img/tm1.jpg" alt="">
-							<img style="margin: 0px 15px 0px 15px" src="img/sm2.jpg" alt="">
+							<div style="margin: 0px 15px 0px 15px">
+								<img src="img/tm1.jpg" alt="">
+							</div>
+							<div style="margin: 0px 15px 0px 15px">
+								<img src="img/sm2.jpg" alt="">
+							</div>
+							<div style="margin: 0px 15px 0px 15px">
+								<img src="img/sm3.jpg" alt="">
+							</div>
+							<div style="margin: 0px 15px 0px 15px">
+								<img src="img/tm1.jpg" alt="">
+							</div>
+							<div style="margin: 0px 15px 0px 15px">
+								<img src="img/sm2.jpg" alt="">
+							</div>
 						</div>
 					</div>
 				</div>
