--- a/drilling_solutions/index.html
+++ b/drilling_solutions/index.html
@@ -300,7 +300,7 @@
 	<footer>
 		<div class="wrapper">
 			<div class="footer__left">
-				<div class="footer__item">
+				<div class="footer__item copyright">
 					<a href="index.html">
 						<img src="img/hlogo.png" alt="">
 					</a>
@@ -313,28 +313,30 @@
 				<nav class="footer__item">
 					<ul>
 						<li><p>МЕНЮ</p></li>
-						<li><a href="">Аренда ямобура</a></li>
-						<li><a href="">Услуги бурения</a></li>
-						<li><a href="">Наши работы</a></li>
-						<li><a href="">Прайс-лист</a></li>
-						<li><a href="">Контакты</a></li>
+						<li><a href="" title="Аренда ямобура">Аренда ямобура</a></li>
+						<li><a href="" title="Услуги бурения">Услуги бурения</a></li>
+						<li><a href="" title="Наши работы">Наши работы</a></li>
+						<li><a href="" title="Прайс-лист">Прайс-лист</a></li>
+						<li><a href="" title="Контакты">Контакты</a></li>
 					</ul>
 				</nav>
 				<nav class="footer__item">
 					<ul>
 						<li><p>УСЛУГИ</p></li>
-						<li><a href="">Аренда ямобура</a></li>
-						<li><a href="">Услуги бурения</a></li>
-						<li><a href="">Наши работы</a></li>
-						<li><a href="">Прайс-лист</a></li>
-						<li><a href="">Контакты</a></li>
+						<li><a href="" title="Аренда ямобура">Аренда ямобура</a></li>
+						<li><a href="" title="Услуги бурения">Услуги бурения</a></li>
+						<li><a href="" title="Наши работы">Наши работы</a></li>
+						<li><a href="" title="Прайс-лист">Прайс-лист</a></li>
+						<li><a href="" title="Контакты">Контакты</a></li>
 					</ul>
 				</nav>
 			</div>
-			<div class="header__info header__info_2">
-				<a href="tel:+74950000000" class="phone phone_2">+7 (495) 000-00-00</a>
-				<a href="mailto:info@site.ru" class="email email_2">info@site.ru</a>
-				<button class="btn call">ПЕРЕЗВОНИТЬ</button>
+			<div class="footer__right">
+				<div class="header__info header__info_2">
+					<a href="tel:+74950000000" class="phone phone_2">+7 (495) 000-00-00</a>
+					<a href="mailto:info@site.ru" class="email email_2">info@site.ru</a>
+					<button class="btn call">ПЕРЕЗВОНИТЬ</button>
+				</div>
 			</div>
 		</div>	
 	</footer>
