--- a/drilling_solutions/inside.html
+++ b/drilling_solutions/inside.html
@@ -257,7 +257,7 @@
 	<footer>
 		<div class="wrapper">
 			<div class="footer__left">
-				<div class="footer__item">
+				<div class="footer__item copyright">
 					<a href="index.html">
 						<img src="img/hlogo.png" alt="">
 					</a>
@@ -288,10 +288,12 @@
 					</ul>
 				</nav>
 			</div>
-			<div class="header__info header__info_2">
-				<a href="tel:+74950000000" class="phone phone_2">+7 (495) 000-00-00</a>
-				<a href="mailto:info@site.ru" class="email email_2">info@site.ru</a>
-				<button class="btn call">ПЕРЕЗВОНИТЬ</button>
+			<div class="footer__right">
+				<div class="header__info header__info_2">
+					<a href="tel:+74950000000" class="phone phone_2">+7 (495) 000-00-00</a>
+					<a href="mailto:info@site.ru" class="email email_2">info@site.ru</a>
+					<button class="btn call">ПЕРЕЗВОНИТЬ</button>
+				</div>
 			</div>
 		</div>	
 	</footer>
